--- a/nginx.conf.d/app.conf
+++ b/nginx.conf.d/app.conf
@@ -24,6 +24,10 @@ server {
     ssl_certificate /usr/share/nginx/ssl/gate.goingnowhere.org.crt;
     ssl_certificate_key /usr/share/nginx/ssl/gate.goingnowhere.org.key;
 
+    location /js/ {
+        root   /usr/share/nginx;
+    }
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
