DEV HACK: no caching

--- a/conf.d/app.conf
+++ b/conf.d/app.conf
@@ -19,6 +19,8 @@ server {
 server {
     listen 443 ssl;
     server_name djinn.dustyfox.uk;
+    add_header Cache-Control "no-cache, must-revalidate";
+    add_header Expires "Sat, 26 Jul 1997 05:00:00 GMT";
 
     ssl_dhparam /etc/nginx/conf.d/ssl-dhparams.pem;
     ssl_certificate /usr/share/nginx/ssl/djinn.dustyfox.uk.crt;
