DEV HACK: tailscale funnel

--- a/conf.d/app.conf
+++ b/conf.d/app.conf
@@ -17,6 +17,16 @@ server {
 }
 
 server {
+    listen 8080;
+    server_name djinn.tail77eea.ts.net;
+
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
+}
+
+server {
     listen 443 ssl;
     server_name djinn.dustyfox.uk;
     add_header Cache-Control "no-cache, must-revalidate";
