--- a/nginx.conf.d/app.conf
+++ b/nginx.conf.d/app.conf
@@ -1,3 +1,5 @@
+include /etc/nginx/nginx.resolv.conf;
+
 ssl_session_cache shared:le_nginx_SSL:10m;
 ssl_session_timeout 1440m;
 ssl_session_tickets off;
@@ -26,6 +28,13 @@ server {
 
     location /js/ {
         root   /usr/share/nginx;
+    }
+
+    location ~ /api/(.*) {
+        # cherrypy listens on 8080
+        # Set as variable to resolve ad-hoc; otherwise, eeapi must start before nginx
+        set $eeapi eeapi:8080;
+        proxy_pass http://$eeapi/$1;
     }
 
     location / {
