--- a/eeapi/requirements.txt
+++ b/eeapi/requirements.txt
@@ -1,1 +1,6 @@
-PyPDF2
+cherrypy == 18.8.0
+mysql-connector-python == 8.0.33
+PyPDF2 == 3.0.1
+pyyaml == 6.0
+reportlab == 4.0.4
+requests == 2.31.0
