--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,6 @@ services:
       - ./nginx.conf.d:/etc/nginx/conf.d
       - ./scanner:/usr/share/nginx/html
       - ./ssl:/usr/share/nginx/ssl
+    environment:
+      - eeapi_url=https://checkin.goingnowhere.org:2443
+      - eeapi_session=fake_session_token
